Support for custom install dirs in CMake build
This restores support for custom install directories, which was lost
when moving from autotools to CMake. This is needed in particular by
distributions to build versioned LLVM packages which are
parallel-installable with the latest version.

This introduces new CMAKE_INSTALL_* variables, following the naming
convention used by the GNUInstallDirs CMake module: for BINDIR, LIBDIR,
INCLUDEDIR, DOCDIR and MANDIR. Existing variables are preserved, and
take their defaults from or determine the new ones' defaults as
appropriate.

--- a/clang/CMakeLists.txt
+++ b/clang/CMakeLists.txt
@@ -7,6 +7,8 @@ include(GNUInstallDirs)
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
   project(Clang)
 
+  include(GNUInstallDirs)
+
   set(CMAKE_CXX_STANDARD 14 CACHE STRING "C++ standard to conform to")
   set(CMAKE_CXX_STANDARD_REQUIRED YES)
   set(CMAKE_CXX_EXTENSIONS NO)
